# market-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
database/migrations/: 20241222020118_create_required_tables.sql  20241222020200_create_relational_columns.sql  20241222020209_create_timestamp_triggers.sql  20241222020239_create_orders_base_prise_colum_relation_trigger.sql  20241222222103_create_user_customer_trigger.sql
scripts/: create-migration.sh  log-docker.sh  migrate.sh
scripts/database/: create-migration.sh  migrate.sh  reset.sh  seed.sh
scripts/database/common/: fetch_env.sh
src/: main.rs
src/app/: mod.rs
src/app/database/: connection.rs  mod.rs
src/components/: customer.rs  item.rs  market.rs  mod.rs  slot.rs
src/components/customer/: customer.rs  inventory.rs  mod.rs
src/components/item/: currency.rs  item.rs  list.rs  mod.rs
src/components/market/: market.rs  mod.rs  order.rs  slot.rs
